--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,245 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Montserrat:ital,wght@0,500;1,100&display=swap');
+html{
+  min-height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  min-height: 100%;
+  
+ 
+  font-family: "Montserrat"; 
+    background: linear-gradient(45deg, blue, pink);
+  /* background: black; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.container{
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+}
+*{
+  margin: 0;
+  padding:0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  text-decoration: none;
+}
+.Navbar{
+  position: fixed;
+  width: 100%;
+  height: 75px;
+  background: linear-gradient(to right, rgb(11, 11, 27), rgb(33, 26, 57));
+  box-shadow: 0px 15px 20px rgb(57, 57, 57);
+  color: white;
+}
+
+.Navbar-links{
+  position: relative;
+  top: -45px;
+  left: -10px;
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+  
+  
+}
+
+.nav-links{
+
+  padding-left: 40px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 500px;
+
+  transition: all 0.3s ease 0s;
+}
+.nav-links:hover{
+  color: rgb(139, 172, 172);
+}
+.main{
+  position: relative;
+  top: 30px;
+  /* background-image: url("bgb.png"); */
+  background-size: cover;
+  filter: blur(1px);
+  width: 100%;
+  height: 100vh;
+}
+
+.logo{
+  width: 70px;
+  height: 70px;
+}
+
+.login-form{
+ width: 500px;
+ height: 500px ;
+  margin-top: 200px;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  top: 25%;
+  border-radius: 25px;
+  box-shadow: -5px 5px 5px black;
+
+
+  
+  padding: 20px ;
+  background: linear-gradient(to bottom, rgb(11, 11, 27), rgb(33, 26, 57));
+ 
+}
+
+.login-info {
+  padding: 20px;
+  width: 350px;
+  height: 45px;
+  /* margin-left: 40%; */
+  border-bottom: 2px solid rgb(42, 80, 115);
+  border-right: none;
+  border-top: none;
+  border-left: none;
+  border-radius: 10px;
+  background-color: rgb(64, 62, 62);
+  background: rgb(20, 20, 49);
+  padding: 2px;
+  /* transition: 1000ms; */
+  outline: none;
+  color: rgb(209, 209, 209);
+  font-size: 16px;
+  font-weight: lighter;
+
+
+ 
+}
+
+input{
+  margin: 20px;
+}
+
+.login-info:hover{
+  border-left: 4px solid rgb(219, 227, 255);
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+ 
+  ;
+
+
+
+}
+
+button{
+  
+  width: 175px;
+  height: 45px;
+  /* margin-left: 45%; */
+  border: 2px solid rgb(25, 47, 68);
+  border-radius: 15px;
+  background-color: rgb(25, 69, 10);
+  /* background: transparent; */
+  margin: 8px;
+  position: relative;
+  top: 80px;
+  font-size: 16px;
+  color: rgb(175, 175, 175);
+  cursor: pointer;
+  
+  transition: 500ms;
+}
+
+button:hover{
+  background-color: rgb(16, 88, 16);
+  
+}
+
+form{
+  padding-top: 25px;
+}
+
+p{
+  /* margin-left: 45%; */
+  color: rgb(145, 144, 144);
+  font-size: 12px;
+  text-decoration: none;
+  position: relative;
+  top: 80px;
+  
+}
+
+p>a{
+  color: rgb(160, 160, 160);
+}
+
+p>a:hover{
+  color:rgb(77, 84, 90)
+}
+
+.mover{
+  position: relative;
+  top: 70px;
+}
+
+.mover-loan{
+  position: relative;
+  top: 15px;
+}
+
+.btn-loan{
+
+  position: relative;
+  top: 50px;
+
+}
+.mover-reg{
+  position: relative;
+  top: 60px;
+
+}
+
+.header{
+  color: rgb(202, 200, 200);
+}
+
+hr{
+  position: relative;
+  top: 25px;
+  left: -20px;
+  background-color: rgb(115, 115, 115);
+  border-bottom:solid rgb(115, 115, 115) 3px;
+  border-left:solid rgb(115, 115, 115) 3px;
+
+  width: 535.8px;
+}
+
+
+.loan-form{
+  
+  height: 580px ;
+
+   
+}
+
+.logo-all{
+  display: flex;
+}
+
+.logo-text{
+  position: relative;
+  top: 22px;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 500px;
 }
