--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,16 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+
+  
   
  
   font-family: "Montserrat"; 
-    background: linear-gradient(45deg, blue, pink);
+    /* background: linear-gradient(45deg, rgb(184, 184, 236), rgb(85, 95, 198)); */
   /* background: black; */
+  background-image: url("./bg4.jpg");
+  background-size: cover;
+  background-position: center center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -41,6 +46,8 @@ a{
   width: 100%;
   height: 75px;
   background: linear-gradient(to right, rgb(11, 11, 27), rgb(33, 26, 57));
+  /* background: linear-gradient(to bottom, rgb(0,0,0,0.3), rgba(0, 0, 0, 0.5)); */
+  backdrop-filter: blur(1px);
   box-shadow: 0px 15px 20px rgb(57, 57, 57);
   color: white;
 }
@@ -94,46 +101,56 @@ a{
   position: relative;
   top: 25%;
   border-radius: 25px;
-  box-shadow: -5px 5px 5px black;
-
-
-  
+  box-shadow: 7px 7px 15px black;
   padding: 20px ;
-  background: linear-gradient(to bottom, rgb(11, 11, 27), rgb(33, 26, 57));
- 
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+  color: black;
+  /* background: transparent; */
+  backdrop-filter: blur(4px);
+  
 }
+
+
 
 .login-info {
   padding: 20px;
   width: 350px;
   height: 45px;
   /* margin-left: 40%; */
-  border-bottom: 2px solid rgb(42, 80, 115);
+  border-bottom: 2px solid rgb(0, 0, 0);
   border-right: none;
   border-top: none;
   border-left: none;
-  border-radius: 10px;
-  background-color: rgb(64, 62, 62);
-  background: rgb(20, 20, 49);
+  border-bottom-left-radius: 10px;
+
+  background: transparent;
+
   padding: 2px;
   /* transition: 1000ms; */
   outline: none;
-  color: rgb(209, 209, 209);
+  color: rgb(23, 23, 23);
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: 700;
 
 
  
 }
 
+::placeholder{
+  color: rgb(0, 0, 0);
+  
+}
+
+
 input{
   margin: 20px;
+  color: black;
 }
 
 .login-info:hover{
-  border-left: 4px solid rgb(219, 227, 255);
+  border-left: 2px solid rgb(21, 20, 35);
   border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
+
  
   ;
 
@@ -146,9 +163,9 @@ button{
   width: 175px;
   height: 45px;
   /* margin-left: 45%; */
-  border: 2px solid rgb(25, 47, 68);
+  border: none;
   border-radius: 15px;
-  background-color: rgb(25, 69, 10);
+  background-color: rgb(0, 0, 0);
   /* background: transparent; */
   margin: 8px;
   position: relative;
@@ -161,7 +178,7 @@ button{
 }
 
 button:hover{
-  background-color: rgb(16, 88, 16);
+  background-color: rgb(10, 17, 10);
   
 }
 
@@ -171,8 +188,9 @@ form{
 
 p{
   /* margin-left: 45%; */
-  color: rgb(145, 144, 144);
-  font-size: 12px;
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: 700;
   text-decoration: none;
   position: relative;
   top: 80px;
@@ -180,7 +198,7 @@ p{
 }
 
 p>a{
-  color: rgb(160, 160, 160);
+  color: rgb(9, 11, 45);
 }
 
 p>a:hover{
@@ -210,16 +228,16 @@ p>a:hover{
 }
 
 .header{
-  color: rgb(202, 200, 200);
+  color: rgb(0, 0, 0);
 }
 
 hr{
   position: relative;
   top: 25px;
   left: -20px;
-  background-color: rgb(115, 115, 115);
-  border-bottom:solid rgb(115, 115, 115) 3px;
-  border-left:solid rgb(115, 115, 115) 3px;
+  background-color: rgb(0, 0, 0);
+  border-bottom:solid rgb(0, 0, 0) 3px;
+  border-left:solid rgb(0, 0, 0) 3px;
 
   width: 535.8px;
 }
@@ -243,3 +261,4 @@ hr{
   text-transform: uppercase;
   font-weight: 500px;
 }
+
