--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   height: 100%;
   display: block;
   text-align: center;
+  z-index:  -1;
 }
 *{
   margin: 0;
@@ -47,11 +48,14 @@ a{
   position: fixed;
   width: 100%;
   height: 75px;
+  background: none;
   background: linear-gradient(to right, rgb(11, 11, 27), rgb(33, 26, 57));
-  /* background: linear-gradient(to bottom, rgb(0,0,0,0.3), rgba(0, 0, 0, 0.5)); */
+  /* background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1)); */
   backdrop-filter: blur(1px);
   box-shadow: 0px 15px 20px rgb(57, 57, 57);
-  color: white;
+  color: rgb(255, 255, 255);
+  backdrop-filter: blur(4px);
+  z-index: 1;
 }
 
 .Navbar-links{
@@ -69,15 +73,17 @@ a{
 
   padding-left: 40px;
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: rgb(179, 179, 179);
   font-size: 18px;
   text-transform: uppercase;
-  font-weight: 500px;
+  font-weight: bold;
 
   transition: all 0.3s ease 0s;
 }
 .nav-links:hover{
-  color: rgb(139, 172, 172);
+  color: rgb(114, 113, 150);
+  
+  
 }
 .main{
   position: relative;
@@ -109,7 +115,7 @@ a{
   color: black;
   /* background: transparent; */
   backdrop-filter: blur(4px);
-  z-index: -1;
+  /* z-index: -1; */
   
 }
 
